# digital-advisor

app/digital_advisor/: .coverage  pyproject.toml
app/digital_advisor/saved_artifacts/saved_models_type1/: APP_model.keras  PEP_model.keras  TSLA_model.keras
app/digital_advisor/saved_artifacts/saved_models_type2/: BKNG_model.keras  META_model.keras  NVDA_model.keras  PLTR_model.keras
app/digital_advisor/saved_artifacts/saved_pca_models/: BKNG_pca.pkl  META_pca.pkl  NVDA_pca.pkl  PLTR_pca.pkl
app/digital_advisor/saved_artifacts/saved_scalers_type1/: APP_scaler.pkl  PEP_scaler.pkl  TSLA_scaler.pkl
app/digital_advisor/saved_artifacts/saved_scalers_type2/: BKNG_scaler.pkl  META_scaler.pkl  NVDA_scaler.pkl  PLTR_scaler.pkl
app/digital_advisor/src/: __init__.py  config.py
app/digital_advisor/src/models/: dataset.py  portfolio.py  prediction.py  transaction.py  user.py
app/digital_advisor/src/routes/: auth_routes.py  balance_routes.py  portfolio_routes.py  prediction_routes.py  price_routes.py  transaction_routes.py
app/digital_advisor/src/schemas/: balance_schema.py  portfolio_schema.py  prediction_schema.py  price_schema.py  transaction_schema.py  user_schema.py
app/digital_advisor/src/services/: auth_service.py  balance_service.py  portfolio_service.py  prediction_service.py  prediction_storage_service.py  price_service.py  transaction_service.py
app/digital_advisor/src/templates/: dashboard.html  history.html  index.html  login.html  (+3 more)
app/digital_advisor/tests/: conftest.py  test_auth.py  test_config.py  test_prediction.py  test_transaction.py
(+16 files in other folders)
